--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.7",
 		"@mui/material": "^5.14.7",
+		"firebase": "^10.3.1",
 		"next": "13.4.19",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
@@ -25,6 +26,7 @@
 		"autoprefixer": "10.4.15",
 		"eslint": "8.48.0",
 		"eslint-config-next": "13.4.19",
+		"firebase-admin": "^11.10.1",
 		"postcss": "8.4.29",
 		"typescript": "5.2.2"
 	}
