--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.7",
 		"@mui/material": "^5.14.7",
+		"@reduxjs/toolkit": "^1.9.5",
 		"firebase": "^10.3.1",
 		"next": "13.4.19",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
+		"react-hook-form": "^7.45.4",
+		"react-redux": "^8.1.2",
 		"tailwindcss": "3.3.3"
 	},
 	"devDependencies": {
