--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@reduxjs/toolkit": "^1.9.5",
 		"firebase": "^10.3.1",
 		"next": "13.4.19",
+		"next-auth": "^4.23.1",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.45.4",
