--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"tailwindcss": "3.3.3"
 	},
 	"devDependencies": {
+		"@svgr/webpack": "^8.1.0",
 		"@types/node": "20.5.9",
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
