--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.7",
 		"@mui/material": "^5.14.7",
+		"@next-auth/firebase-adapter": "^2.0.1",
 		"@reduxjs/toolkit": "^1.9.5",
 		"firebase": "^10.3.1",
 		"next": "13.4.19",
